--- a/principal/templates/pages/herramienta.html
+++ b/principal/templates/pages/herramienta.html
@@ -7,7 +7,7 @@
 {%block contenido%}
   <div class="container">
     <div class="equipo">
-        <h1 style="text-align:center;">EQUIPO</h1>
+        <h1 style="text-align:center;">HERRAMIENTA</h1>
         <table class="table table-hover">
             <thead>
                 <tr>
