--- a/principal/templates/pages/herramientas.html
+++ b/principal/templates/pages/herramientas.html
@@ -1,9 +1,80 @@
+{%extends 'index.html'%}
 {%block header%}
      {%include 'components/header.html'%}
 {%endblock%}
 
 {%block contenido%}
-    holaaaa
+{% load crispy_forms_tags %}
+<div class="container mt-3" style="width: 80%; font-size: 14px">
+     <h1 style="text-align:center;">HERRAMIENTAS</h1>
+     <form action="" method="POST" enctype="multipart/form-data" autocomplete="off" novalidate>
+         {% csrf_token %}
+         <div class="row">
+             <div class="col-4">{{form.fecha|as_crispy_field}}</div>
+             <div class="col-4">{{form.entrada|as_crispy_field}}</div>
+             <div class="col-4">{{form.salida|as_crispy_field}}</div>
+         </div>
+         <div class="row">
+             <div class="col-4">{{form.referencia|as_crispy_field}}</div>
+             <div class="col-4">{{form.ocupacionenArea|as_crispy_field}}</div>
+             <div class="col-4">{{form.especificaciones|as_crispy_field}}</div>
+         </div>
+         <div class="row">
+             <div class="col-4">{{form.cantidad|as_crispy_field}}</div>
+             <div class="col-4">{{form.repuesto|as_crispy_field}}</div>
+             <div class="col-4">{{form.estado|as_crispy_field}}</div>
+         </div>
+         <div class="row">
+             <div class="col-4">{{form.categoria|as_crispy_field}}</div>
+             <div class="col-4">{{form.marca|as_crispy_field}}</div>
+             <div class="col-4">{{form.imagenH|as_crispy_field}}</div>
+         </div>
+         <div class="row">
+             <div class="col-6">{{form.valorU|as_crispy_field}}</div>
+             <div class="col-6">{{form.costo|as_crispy_field}}</div>
+         </div>
+         <div class="row justify-content-center">
+             <input type="submit" class="btn btn-primary col-6">
+         </div>
+
+         {% for message in messages %}             
+             {% if message.tags == 'success' %}
+                 <div class="alert alert-success alert-dismissible fade show" role="alert">
+                     <a href="{% url 'principal' %}"></a>
+                 </div>
+             {% endif %}
+         {% endfor %}
+     </form>
+ </div>
+ <hr>
+ <h1 class="m-4" style="text-align:center;">TABLA DE HERRAMIENTAS</h1>
+    <div class="container mt-1">
+        <table  id="tblEquipos" class="table table-striped" style="width:100%">
+            <thead>
+                <tr>
+                    <th>repuesto</th>
+                    <th>repuesto</th>
+                    <th>estado</th>
+                    <th>cantidad</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for a in herramientas %}
+                <tr>
+                    <td><a href="{% url 'herramienta' id=a.id %}">{{a.repuesto}}</a></td>
+                    <td>{{a.repuesto}}</td>
+                    <td>{{a.estado}}</td>
+                    <td>{{a.cantidad}}</td>
+                  </tr>
+                {%endfor%}
+            </tbody>
+        </table>
+  </div>
+
+  {%if equipos%}
+
+   
+  {% endif %}
 {%endblock%}
 
 {%block footer%}
