--- a/principal/templates/pages/principal.html
+++ b/principal/templates/pages/principal.html
@@ -5,7 +5,19 @@
 {%endblock%}
 
 {%block contenido%}
-    holaaaa
+     <div class="faaa">
+          <p class="titulo-principal">GESTION INVENTARIO QUIMINT</p>
+     </div>
+     <!-- <div class="principal-modulos">
+          <div class="row justify-content-center gap-4">
+              <a class="col-2 principal-botones" href="">
+                    <p>INVENTARIO</p>
+              </a>
+               <a class="col-2 principal-botones" href="">
+                    <p>CONTABILIDAD</p>
+               </a>
+          </div>
+     </div> -->
 {%endblock%}
 
 {%block footer%}
