--- a/principal/templates/pages/equipo.html
+++ b/principal/templates/pages/equipo.html
@@ -4,6 +4,8 @@
      {%include 'components/header.html'%}
 {%endblock%}
 
+{% load crispy_forms_tags %}
+
 {%block contenido%}
   <div class="container">
     <div class="equipo">
@@ -15,6 +17,7 @@
                     <th>repuesto</th>
                     <th>estado</th>
                     <th>cantidad</th>
+                    <th>Salidas</th>
                 </tr>
             </thead>
             <tbody>
@@ -23,13 +26,82 @@
                     <td>{{equipo.repuesto}}</td>
                     <td>{{equipo.estado}}</td>
                     <td>{{equipo.cantidad}}</td>
+                    <td>
+                        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#entradas">
+                            Entradas
+                        </button>
+                        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#salidas">
+                            Salidas
+                        </button>
+                    </td>
                 </tr>
             </tbody>
         </table>
     </div>
+    <div class="modal fade" id="entradas" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Entradas de Equipos</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <form action="" method="post" enctype="multipart/form-data">
+                {% csrf_token %}
+                <div class="row">
+                    <div class="col-6">{{form.fecha|as_crispy_field}}</div>
+                    <div class="col-6">{{form.cantidad|as_crispy_field}}</div>
+                </div>
+                <div class="row">
+                    <div class="col-4">{{form.entrada|as_crispy_field}}</div>
+                    <div class="col-4">{{form.valorU|as_crispy_field}}</div>
+                    <div class="col-4">{{form.costo|as_crispy_field}}</div>
+                </div>
+                <div class="row justify-content-center">
+                    <input type="submit" class="btn btn-primary col-6">
+                </div>
+              </form>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+            </div>
+          </div>
+        </div>
+    </div>
+    <div class="modal fade" id="salidas" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Salida de Equipos</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <form action="" method="post" enctype="multipart/form-data">
+                {% csrf_token %}
+                <div class="row">
+                    <div class="col-6">{{form.fecha|as_crispy_field}}</div>
+                    <div class="col-6">{{form.cantidad|as_crispy_field}}</div>
+                </div>
+                <div class="row">
+                    <div class="col-4">{{form.salida|as_crispy_field}}</div>
+                    <div class="col-4">{{form.valorU|as_crispy_field}}</div>
+                    <div class="col-4">{{form.costo|as_crispy_field}}</div>
+                </div>
+                <div class="row justify-content-center">
+                    <input type="submit" class="btn btn-primary col-6">
+                </div>
+              </form>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+            </div>
+          </div>
+        </div>
+    </div>
+    <br>
     <div class="historico">
         <h1 style="text-align:center;">HISTORICO</h1>
-        <table class="table table-hover">
+        <table id="tblEquipos" class="table table-hover" style="width:100%">
             <thead>
                 <tr>
                     <th>repuesto</th>
