--- a/principal/templates/pages/equipo.html
+++ b/principal/templates/pages/equipo.html
@@ -49,13 +49,12 @@
               <form action="" method="post" enctype="multipart/form-data">
                 {% csrf_token %}
                 <div class="row">
-                    <div class="col-6">{{form.fecha|as_crispy_field}}</div>
-                    <div class="col-6">{{form.cantidad|as_crispy_field}}</div>
-                </div>
-                <div class="row">
                     <div class="col-4">{{form.entrada|as_crispy_field}}</div>
                     <div class="col-4">{{form.valorU|as_crispy_field}}</div>
                     <div class="col-4">{{form.costo|as_crispy_field}}</div>
+                </div>
+                <div class="row">
+                  <div class="col-12">{{form.especificaciones|as_crispy_field}}</div>
                 </div>
                 <div class="row justify-content-center">
                     <input type="submit" class="btn btn-primary col-6">
@@ -76,16 +75,15 @@
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-              <form action="" method="post" enctype="multipart/form-data">
+              
+              <form method="post" enctype="multipart/form-data" autocomplete="off" novalidate>
                 {% csrf_token %}
                 <div class="row">
-                    <div class="col-6">{{form.fecha|as_crispy_field}}</div>
-                    <div class="col-6">{{form.cantidad|as_crispy_field}}</div>
+                    <div class="col-6">{{form.salida|as_crispy_field}}</div>
+                    <div class="col-6">{{form.ocupacionenArea|as_crispy_field}}</div>
                 </div>
                 <div class="row">
-                    <div class="col-4">{{form.salida|as_crispy_field}}</div>
-                    <div class="col-4">{{form.valorU|as_crispy_field}}</div>
-                    <div class="col-4">{{form.costo|as_crispy_field}}</div>
+                  <div class="col-12">{{form.especificaciones|as_crispy_field}}</div>
                 </div>
                 <div class="row justify-content-center">
                     <input type="submit" class="btn btn-primary col-6">
