--- a/principal/templates/pages/equipos.html
+++ b/principal/templates/pages/equipos.html
@@ -7,10 +7,11 @@
 {%block contenido%}
     <div class="container mt-3" style="width: 80%; font-size: 14px">
         <h1 style="text-align:center;">EQUIPOS</h1>
-        <form action="" method="POST" enctype="multipart/form-data" autocomplete="off" novalidate>
+
+        <form method="POST" enctype="multipart/form-data" autocomplete="off" novalidate>
             {% csrf_token %}
             <div class="row">
-                <div class="col-4">{{form.fecha|as_crispy_field}}</div>
+                <div class="col-4">{{form.fecha|as_crispy_field }}</div>
                 <div class="col-4">{{form.entrada|as_crispy_field}}</div>
                 <div class="col-4">{{form.salida|as_crispy_field}}</div>
             </div>
@@ -34,17 +35,17 @@
                 <div class="col-6">{{form.costo|as_crispy_field}}</div>
             </div>
             <div class="row justify-content-center">
-                <input type="submit" class="btn btn-primary col-6">
+                <button type="submit" class="btn btn-primary col-6">Enviar</button>
             </div>
+        </form>
 
-            {% for message in messages %}             
+        {% for message in messages %}             
                 {% if message.tags == 'success' %}
                     <div class="alert alert-success alert-dismissible fade show" role="alert">
                         <a href="{% url 'principal' %}"></a>
                     </div>
                 {% endif %}
             {% endfor %}
-        </form>
     </div>
     <hr>
     <h1 class="m-4" style="text-align:center;">TABLA DE EQUIPOS</h1>
@@ -68,7 +69,7 @@
                     <td>{{a.cantidad}}</td>
                     <td>
                         <button class="btn btn-warning"><i class="bi bi-pencil-square"></i></button>
-                        <button class="btn btn-danger"><i class="bi bi-trash"></i></button>
+                        <a  href="{% url 'eliminar' id=a.id %}" class="btn btn-danger"><i class="bi bi-trash"></i></a>
                     </td>
                   </tr>
                 {%endfor%}
