--- a/principal/templates/pages/herramientas.html
+++ b/principal/templates/pages/herramientas.html
@@ -56,6 +56,7 @@
                     <th>repuesto</th>
                     <th>estado</th>
                     <th>cantidad</th>
+                    <th>Acción</th>
                 </tr>
             </thead>
             <tbody>
@@ -65,6 +66,10 @@
                     <td>{{a.repuesto}}</td>
                     <td>{{a.estado}}</td>
                     <td>{{a.cantidad}}</td>
+                    <td>
+                        <button class="btn btn-warning"><i class="bi bi-pencil-square"></i></button>
+                        <a  href="{% url 'eliminar' id=a.id %}" class="btn btn-danger"><i class="bi bi-trash"></i></a>
+                    </td>
                   </tr>
                 {%endfor%}
             </tbody>
